<resources>
    <string name="app_name">Round Sync</string>
    <string name="app_description">Rclone for Android</string>
    <string name="app_short_name">Round Sync</string>
    <string name="title_activity_main">Round Sync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_changelog">Changelog</string>
    <string name="title_activity_contributors">License</string>
    <string name="remotes">Remotes</string>
    <string name="settings">Settings</string>
    <string name="import_rclone_config">Import rclone config</string>
    <string name="export_rclone_config">Export rclone config</string>
    <string name="about">About</string>
    <string name="sort">Sort</string>
    <string name="select_all">Select all</string>
    <string name="serve">Serve…</string>
    <string name="action_sort_name">Name</string>
    <string name="action_sort_date">Date</string>
    <string name="action_sort_size">Size</string>
    <string name="download">Download</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="app_version">App Version</string>
    <string name="rclone_version">Rclone Version</string>
    <string name="changelog">Changelog</string>
    <string name="license_and_contributors">License and Contributors</string>
    <string name="credits_libraries">Libraries and Credits</string>
    <string name="star_on_github">Star on GitHub</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="author">Original Author</string>
    <string name="author_name" translatable="false">Patryk Kaczmarkiewicz</string>
    <string name="follow_on_github">Follow on GitHub</string>
    <string name="maintainer">Maintainer</string>
    <string name="maintainer_name" translatable="false">Felix Nüsse &lt;github.com/newhinton&gt;</string>
    <string name="old_maintainer">Old Maintainer</string>
    <string name="old_maintainer_name" translatable="false">x0b &lt;github.com/x0b&gt;</string>
    <string name="empty_folder">The folder is empty</string>
    <string name="ooops">Ooops!</string>
    <string name="no_config_found">No configuration found, please import or add remote</string>
    <string name="import_configuration">Import configuration</string>
    <string name="empty_state_icon">Empty state icon</string>
    <string name="file_icon">File icon</string>
    <string name="interpunct">•</string>
    <string name="remote_icon">Remote Icon</string>
    <string name="new_folder">New Folder</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="app_icon">App Icon</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="github_app_url" translatable="false">https://github.com/newhinton/extRact</string>
    <string name="github_issue_url" translatable="false">https://github.com/newhinton/extRact/issues/new/choose</string>
    <string name="github_author_url" translatable="false">https://github.com/kaczmarkiewiczp</string>
    <string name="github_maintainer_url" translatable="false">https://github.com/newhinton</string>
    <string name="github_old_maintainer_url" translatable="false">https://github.com/x0b</string>
    <string name="about_check_updates">Check</string>
    <string name="replace_config_file_question">Replace the current configuration file?</string>
    <string name="config_file_lost_statement">Your current configuration will be lost</string>
    <string name="continue_statement">Continue</string>
    <string name="download_complete">Download complete</string>
    <string name="download_service_notification_description">File downloads</string>
    <string name="download_service_notification_title">Download</string>
    <string name="streaming_service_notification_title">Streaming Service</string>
    <string name="streaming_service_notification_content">Serving on http://127.0.0.1:%1$d</string>
    <string name="streaming_service_notification_channel_description">Streaming service</string>
    <string name="streaming_task_failed">Could not stream file</string>
    <string name="rcd_service_notification_channel_description">Background Service</string>
    <string name="upload_service_notification_title">Upload</string>
    <string name="upload_complete">Upload complete</string>
    <string name="upload_service_notification_channel_description">File uploads</string>
    <string name="remotes_toolbar_title">Remotes</string>
    <string name="fab_upload_files">Upload Files</string>
    <string name="fab_new_folder">New Folder</string>
    <string name="okay_confirmation">Okay</string>
    <string name="selected">selected</string>
    <string name="rename_file">Rename a file</string>
    <string name="type_new_file_name">Enter a new file name</string>
    <string name="select_destination">Select destination</string>
    <string name="create_new_folder">Create a folder</string>
    <string name="type_new_folder_name">Enter a new folder name</string>
    <string name="loading_file">Loading file</string>
    <string name="please_wait">Please wait</string>
    <string name="ok">OK</string>
    <string name="file_renamed_success">File Renamed</string>
    <string name="files_moved_success">File(s) moved</string>
    <string name="files_deleted_success">File(s) deleted</string>
    <string name="make_directory_success">New folder created</string>
    <string name="error_getting_dir_content">Error retrieving directory contents</string>
    <string name="error_getting_remotes">Failed to retrieve remotes</string>
    <string name="error_deleting_file">File deletion error</string>
    <string name="error_mkdir">Error creating directory</string>
    <string name="error_moving_file">File move error</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_date_modified">By modification date</string>
    <string name="sort_by_size">By size</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="filename">Filename</string>
    <string name="modified_time">Modification time</string>
    <string name="size">Size</string>
    <string name="md5" translatable="false">MD5</string>
    <string name="sha1" translatable="false">SHA1</string>
    <string name="tap_to_calculate">Tap to calculate</string>
    <string name="calculating">Calculating..</string>
    <string name="hash_error">ERROR</string>
    <string name="hash_unsupported">UNSUPPORTED</string>
    <string name="hash_copied_confirmation">Hash copied to clipboard</string>
    <string name="copying_rclone_config">Copying rclone configuration</string>
    <string name="copying_rclone_config_fail">Failed to copy rclone configuration</string>
    <string name="creating_rclone_binary">Creating rclone binary</string>
    <string name="error_creating_rclone_binary">Error creating rclone binary</string>
    <string name="config_password_protected">Configuration file is password protected</string>
    <string name="please_enter_password">Enter your password</string>
    <string name="working">Working</string>
    <string name="error_unlocking_config">Error unlocking configuration</string>
    <string name="locked_configuration_password">Locked configuration password</string>
    <string name="configuration_is_password_protected">Configuration is password protected</string>
    <string name="press_to_unlock">Press to unlock</string>
    <string name="out_of">out of</string>
    <string name="downloads_finished">downloads finished</string>
    <string name="downloads_failed">downloads failed</string>
    <string name="download_failed">Download failed</string>
    <string name="files_uploaded">files uploaded</string>
    <string name="failed_to_upload">files failed to upload</string>
    <string name="upload_failed">Upload failed</string>
    <string name="properties">Properties</string>
    <string name="open_as">Open as</string>
    <string name="open_as_text">Text</string>
    <string name="open_as_audio">Audio</string>
    <string name="open_as_video">Video</string>
    <string name="open_as_image">Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_primary_color_title">Primary Color</string>
    <string name="pref_accent_color_title">Accent Color</string>
    <string name="pref_header_look_and_feel">Look and Feel</string>
    <string name="restart_required">App restart is required</string>
    <string name="select_primary_color">Select a primary color</string>
    <string name="select_accent_color">Select an accent color</string>
    <string name="title_activity_about_libs" translatable="false">AboutLibsActivity</string>
    <string name="app_icon_made_by">App icon made by</string>
    <string name="smashicons" translatable="false">Smashicons</string>
    <string name="from">from</string>
    <string name="flaticon" translatable="false">Flaticon</string>
    <string name="pref_key_intro_v1_12_0" translatable="false">intro_v1_12_0_completed</string>
    <string name="intro_welcome_title">Welcome</string>
    <string name="intro_welcome_description">extRact is a file management tool that can handle files stored on your device or in the cloud. For more information, visit the x0b.github.io/docs.</string>
    <string name="intro_storage_title">Storage access required</string>
    <string name="pref_key_color_primary" translatable="false">pref_key_color_primary</string>
    <string name="pref_key_color_accent" translatable="false">pref_key_color_accent</string>
    <string name="file_access">File Access</string>
    <string name="look_and_feel">Look and Feel</string>
    <string name="notifications_pref_title">Notifications</string>
    <string name="search">Search</string>
    <string name="provider_ftp">FTP</string>
    <string name="provider_http">HTTP</string>
    <string name="serve_dlna">DLNA</string>
    <string name="provider_webdav">Webdav</string>
    <string name="empty_trash">Empty trash</string>
    <string name="link">Link</string>
    <string name="pin_to_the_top">Pin to the top</string>
    <string name="pin_to_drawer">Pin to drawer</string>
    <string name="wrap_filenames">Wrap filenames</string>
    <string name="go_to">Go to</string>
    <string name="menu_select_storage">Storage</string>
    <string name="settings_header_general">General</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="sync">Sync…</string>
    <string name="nav_drawer_pinned_header">Pinned</string>
    <string name="nav_header_options_header">Options</string>
    <string name="logging_settings_header">Logging</string>
    <string name="look_and_feel_settings_icon_content_description">Look and Feel settings icon</string>
    <string name="general_settings_icon_content_description">General settings icon</string>
    <string name="notification_settings_icon_content_description">Notification settings icon</string>
    <string name="logging_settings_icon_content_description">Logging settings icon</string>
    <string name="file_access_settings_icon_content_description">File access settings icon</string>
    <string name="allow_remote_access">Allow access from other devices</string>
    <string name="authentication">Authentication</string>
    <string name="optional">Optional</string>
    <string name="tasks">Tasks</string>
    <string name="trigger">Triggers</string>
    <string name="logFragment">Logs</string>
</resources>