<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_go_to"
        android:title="@string/go_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_link"
        android:title="@string/link"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_serve"
        android:title="@string/serve"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sync"
        android:title="@string/sync"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_empty_trash"
        android:title="@string/empty_trash"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_wrap_filenames"
        android:title="@string/wrap_filenames"
        android:checkable="true"
        app:showAsAction="never" />
</menu>