<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pin"
        android:title="@string/pin_to_the_top" />

    <item
        android:id="@+id/action_favorite"
        android:title="@string/pin_to_drawer" />

    <item
            android:id="@+id/action_remote_rename"
            android:title="@string/rename" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete" />

    <item
            android:id="@+id/action_remote_properties"
            android:title="@string/properties" />

    <item
        android:id="@+id/action_add_to_home_screen"
        android:title="@string/add_to_home_screen" />
</menu>