<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_top"
        android:orderInCategory="0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_remotes"
            android:icon="@drawable/ic_twotone_cloud_24"
            android:title="@string/remotes" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_round_swap_vert_24"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_trigger"
            android:icon="@drawable/ic_round_av_timer_24"
            android:title="@string/trigger" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_round_list_24"
            android:title="@string/logFragment" />
    </group>

    <item
        android:title="@string/nav_drawer_pinned_header"
        android:id="@+id/drawer_pinned_header"
        android:orderInCategory="1"
        android:checkableBehavior="single">
        <menu>
            <group
                android:id="@+id/nav_pinned"
                android:orderInCategory="1"
                android:checkableBehavior="none">
            </group>
        </menu>
    </item>

    <item
        android:title="@string/nav_header_options_header"
        android:orderInCategory="2"
        android:checkableBehavior="single">
        <menu>
            <group
                android:id="@+id/nav_bottom"
                android:orderInCategory="2"
                android:checkableBehavior="none"
                android:title="@string/settings">
                <item
                    android:id="@+id/nav_import"
                    android:icon="@drawable/ic_import"
                    android:title="@string/import_rclone_config" />

                <item
                    android:id="@+id/nav_export"
                    android:icon="@drawable/ic_export"
                    android:title="@string/export_rclone_config" />

                <item
                    android:id="@+id/nav_settings"
                    android:checkable="false"
                    android:icon="@drawable/ic_twotone_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_about"
                    android:checkable="false"
                    android:icon="@drawable/ic_twotone_info_24"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>
