<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="2"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_file_properties"
        android:title="@string/properties"
        android:icon="@drawable/ic_properties"
        android:orderInCategory="4"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_as"
        android:title="@string/open_as"
        android:orderInCategory="5"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_http_serve"
        android:title="@string/http_serve"
        android:orderInCategory="6"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_empty_trash"
        android:title="@string/empty_trash"
        android:orderInCategory="7"
        app:showAsAction="never" />
</menu>