<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RadioGroup
        android:id="@+id/radio_group_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical" >

        <RadioButton
                android:id="@+id/radio_ftp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textColor="?attr/textColorPrimary"
                android:text="@string/provider_ftp"/>

        <RadioButton
                android:id="@+id/radio_dlna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textColor="?attr/textColorPrimary"
                android:text="@string/serve_dlna"/>

        <RadioButton
            android:id="@+id/radio_http"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textColor="?attr/textColorPrimary"
            android:checked="true"
            android:text="@string/provider_http" />

        <RadioButton
            android:id="@+id/radio_webdav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textColor="?attr/textColorPrimary"
            android:text="@string/provider_webdav" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox_allow_remote_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_remote_access"
        android:textColor="?attr/textColorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/authentication"
        android:textColor="?attr/colorAccent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_text_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorPrimary"
            android:inputType="text"
            tools:text="Username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textSize="12sp"
            android:textColor="?attr/textColorSecondary"
            android:text="@string/optional"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?attr/iconTint">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColorPrimary"
            android:inputType="textPassword"
            tools:text="Username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textSize="12sp"
            android:textColor="?attr/textColorSecondary"
            android:text="@string/optional"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>