<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:theme="@style/SettingsTheme"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/settings_padding_ends"
        android:paddingEnd="@dimen/settings_padding_ends"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/general_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/settings_padding_topbottom"
            android:paddingBottom="@dimen/settings_padding_topbottom"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/general_Settings_icon"
                android:layout_width="@dimen/settings_icon_image_size"
                android:layout_height="@dimen/settings_icon_image_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/general_settings_icon_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/general_Settings_icon"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:textStyle="bold"
                android:text="@string/settings_header_general"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/file_access_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/settings_padding_topbottom"
                android:paddingBottom="@dimen/settings_padding_topbottom"
                android:clickable="true"
                android:focusable="true" >

            <ImageView
                    android:id="@+id/file_access_settings_icon"
                    android:layout_width="@dimen/settings_icon_image_size"
                    android:layout_height="@dimen/settings_icon_image_size"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_file_black"
                    android:contentDescription="@string/file_access_settings_icon_content_description" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/file_access_settings_icon"
                    android:paddingStart="32dp"
                    android:paddingEnd="0dp"
                    android:textStyle="bold"
                    android:text="@string/file_access"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/look_and_feel_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/settings_padding_topbottom"
            android:paddingBottom="@dimen/settings_padding_topbottom"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/look_and_feel_settings_icon"
                android:layout_width="@dimen/settings_icon_image_size"
                android:layout_height="@dimen/settings_icon_image_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_look_and_feel"
                android:contentDescription="@string/look_and_feel_settings_icon_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/look_and_feel_settings_icon"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:textStyle="bold"
                android:text="@string/look_and_feel"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notification_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/settings_padding_topbottom"
            android:paddingBottom="@dimen/settings_padding_topbottom"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/notification_settings_icon"
                android:layout_width="@dimen/settings_icon_image_size"
                android:layout_height="@dimen/settings_icon_image_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_notifications"
                android:contentDescription="@string/notification_settings_icon_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/notification_settings_icon"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:textStyle="bold"
                android:text="@string/notifications_pref_title"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logging_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/settings_padding_topbottom"
            android:paddingBottom="@dimen/settings_padding_topbottom"
            android:clickable="true"
            android:focusable="true" >

            <ImageView
                android:id="@+id/logging_settings_icon"
                android:layout_width="@dimen/settings_icon_image_size"
                android:layout_height="@dimen/settings_icon_image_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_file_alert"
                android:contentDescription="@string/logging_settings_icon_content_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/logging_settings_icon"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:textStyle="bold"
                android:text="@string/logging_settings_header"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>